# shred

./: README.md  pyproject.toml
src/shred/: cli.py
src/shred/requirements/: test.txt
